2008-09-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 552959 – GtkTrayIcon: _NET_SYSTEM_TRAY_VISUAL and real
	transparency

	* gtk/gtktrayicon-x11.c: Add support for the _BET_SYSTEM_TRAY_VISUAL
	property described in
	http://lists.freedesktop.org/archives/xdg/2008-September/009919.html
	If _NET_SYSTEM_TRAY_VISUAL is a visual with an alpha channel, the 
	parent-relative-background hack is skipped and we draw with a real
	transparent background.

	* gtk/gtkrc.c: Remove the default GtkTrayIcon style, since the
	parent-relative background is now set when realizing the tray
	icon.

	Patch by Owen Taylor

2008-09-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 552956 – Should check composite extension version

	* gdk/x11/gdkdisplay-x11.c: Check that the version of the
	composite extension is at least 0.4.
	Patch by Owen Taylor

2008-09-26  Matthias Clasen  <mclasen@redhat.com>
	
	Bug 553803 – eventually call XCloseDevice on XOpenDevice results

	* gdk/x11/gdkinput.c: Add a finalize function for device objects,
	and call XCloseDevice there. 

	* gdk/x11/gdkinput-x11.c:
	* gdk/x11/gdkdisplay-x11.c: Move freeing of device objects to
	the finalize function.
	Patch by Caolan McNamara
	
2008-09-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 553578 - tabs are not drawn correctly

	* gtk/gtknotebook.c: Track the visibility state of notebook tabs 
	between allocations so that we know to redraw the tab labels if 
	tabs are hidden and shown without changing position. 
	Reported by Marek Kašík, patch by Owen Taylor.

2008-09-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 553133 – GtkFileChooser won't ask to mount a volume
	Bug 553211 – GtkFileChooserButton unsets filter after first use

	* gtk/gtkfilechooserdefault.c (shortcuts_activate_volume): Use
	a GtkMountOperation when mounting, so that we get a password
	dialog when required.  

	* gtk/gtkfilechooserdefault.c (show_and_select_files): Also
	get the content-type, since it is used later on. 
	Pointed out by Davyd Madeley.
